@@ -1,13 +1,13 @@
 /*
 Theme Name: MyKnowledgeBase
-Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 5.7
+Theme URI: https://www.guidovanderleest.nl/myknowledgebase
+Version: 5.8
 Author: Guido van der Leest
-Author URI: http://www.guidovanderleest.nl
+Author URI: https://www.guidovanderleest.nl
 Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: sidebar, homepage widgets, footer widgets, custom header image, custom background, custom logo to replace site title and tagline, full width page template, dropdown navigation. For more info please check readme file. Enjoy.
 Tags: one-column, two-columns, right-sidebar, full-width-template, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, microformats, translation-ready
 License: GNU General Public License v3 or later
-License URI: http://www.gnu.org/licenses/gpl-3.0.html
+License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: myknowledgebase
 
 This theme, like WordPress, is licensed under the GPL.
@@ -59,7 +59,7 @@ table {
 
 
 /* BODY AND CONTAINER */
-body {background:#fff; color:#333; font-family:'Open Sans', sans-serif; font-size:0.9em; line-height:1.5em; text-align:left; word-wrap:break-word;}
+body {background:#fff; color:#333; font-family:'Open Sans', sans-serif; font-size:15px; line-height:1.5; text-align:left; word-wrap:break-word;}
 #container {max-width:1200px; position:relative; margin:0 auto 0; padding:0 20px;}
 #container:after {content:''; display:block; height:0; clear:both;}
 
@@ -70,12 +70,12 @@ body {background:#fff; color:#333; font-family:'Open Sans', sans-serif; font-siz
 
 
 /* HEADINGS */
-h1 {clear:both; margin:0 0 10px; font-size:2.25em; line-height:1.25em;}
-h2 {clear:both; margin:0 0 10px; font-size:1.80em; line-height:1.25em;}
-h3 {clear:both; margin:0 0 10px; font-size:1.45em; line-height:1.5em;}
-h4 {clear:both; margin:0 0 10px; font-size:1.20em; line-height:1.5em;}
-h5 {clear:both; margin:0 0 10px; font-size:1em; line-height:1.5em;}
-h6 {clear:both; margin:0 0 10px; font-size:0.80em; line-height:2em;}
+h1 {clear:both; margin:0 0 10px; font-size:2.2em; line-height:1.25;}
+h2 {clear:both; margin:0 0 10px; font-size:1.75em; line-height:1.25;}
+h3 {clear:both; margin:0 0 10px; font-size:1.45em; line-height:1.5;}
+h4 {clear:both; margin:0 0 10px; font-size:1.2em; line-height:1.5;}
+h5 {clear:both; margin:0 0 10px; font-size:1em; line-height:2;}
+h6 {clear:both; margin:0 0 10px; font-size:0.8em; line-height:2;}
 
 
 /* LINKS AND HTML TAGS */
@@ -83,15 +83,15 @@ a {text-decoration:none; color:#08a0ff;}
 a:hover {text-decoration:underline;}
 
 strong, b {font-weight:bold;}
-small {font-size:0.80em;}
-big {font-size:1.20em;}
+small {font-size:0.8em;}
+big {font-size:1.2em;}
 sub {vertical-align:sub; font-size:0.9em;}
 sup {vertical-align:super; font-size:0.9em;}
 ins, mark {font-weight:bold; background:none; text-decoration:none; color:#08a0ff;}
 cite, em, abbr, acronym {font-style:italic;}
 code, kbd, samp, var {font-family:monospace, monospace;}
 pre {margin:0 0 10px; padding:5px 10px; white-space:pre-wrap; border:1px solid #eee;}
-blockquote, q {margin:0 0 10px; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #08a0ff;}
+blockquote, q {margin:0 0 10px; padding:0 0 0 20px; display:block; font-size:1.2em; font-style:italic; border-left:2px solid #08a0ff;}
 address {margin:0 0 10px; font-style:italic;}
 p {margin:0 0 10px;}
 hr {height:1px; background:#eee; border:0; margin:0 0 10px;}
@@ -215,7 +215,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 #categories-four ul:nth-of-type(4n+1) {clear:left;}
 #categories-four ul:nth-of-type(4n+4) {margin:0 0 20px 0;}
 
-.cat-name {margin:0 0 5px; list-style:none; font-size:1.2em; line-height:1.2em; font-weight:bold; padding:0 0 10px; border-bottom:2px solid #08a0ff;}
+.cat-name {margin:0 0 5px; list-style:none; font-size:1.2em; font-weight:bold; padding:0 0 10px; border-bottom:2px solid #08a0ff;}
 .cat-name a:hover {text-decoration:none; color:#333;}
 .cat-description {padding:5px 0 0;}
 .post-name {margin:0 0 0 20px;}
@@ -225,7 +225,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 .page-title {margin:0 0 20px;}
 .blog-page-text {clear:both; margin:0 0 20px;}
 .archive-description {width:100%; clear:both; float:left; font-style:italic;}
-.pagelink {width:100%; clear:both; float:left; padding:20px 0 10px;}
+.pagelink {width:100%; clear:both; float:left; padding:20px 0;}
 
 
 /* POST */
@@ -289,7 +289,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 .comment-list .children > li {margin:0 0 0 10px;}
 .comment-body {background:#f8f8f8; border:1px solid #eee; padding:10px; margin:0 0 20px;}
 .comment-content {padding:10px 0;}
-.comment-notes, .form-allowed-tags {font-size:0.80em; padding:5px 0;}
+.comment-notes, .form-allowed-tags {font-size:0.8em; padding:5px 0;}
 .comments-title {margin:0 0 20px; font-size:1.45em;}
 .comment-reply-title, .no-comments {margin:0; font-size:1.45em;}
 .comment-author .avatar {margin:0 5px 0 0; border-radius:5px;}
@@ -335,19 +335,22 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 /* MOBILE */
 @media screen and (max-width:767px) { 
 	/* BODY AND CONTAINER */
-	body {font-size:1em; line-height:1.5em;}
+	body {font-size:15px; line-height:1.5;}
 	body.custom-background {background-image:none !important;}
 	#container {width:98%; padding:10px 1% 0;}
 
 	/* MAIN CONTENT AREA */
 	#content, #content-full {width:100%; clear:both; float:left; padding:0 0 20px;}
 
+	/* HEADINGS */
+	h1 {font-size:1.75em;}
+
 	/* HEADER FIRST */
 	#header-first {padding:0;}
 
 	/* HEADER FIRST LOGO */
 	.logo {width:100%; clear:both; padding:10px 0 20px; text-align:center;}
-	.logo h1 {font-size:2.25em;}
+	.logo h1 {font-size:2em;}
 	.logo h2 {font-size:1.45em;}
 
 	/* HEADER FIRST MENU */
@@ -389,10 +392,6 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	#categories-three ul:nth-of-type(2n+2) {margin:0 0 20px 0;}
 	#categories-four ul:nth-of-type(2n+1) {clear:left;}
 	#categories-four ul:nth-of-type(2n+2) {margin:0 0 20px 0;}
-
-	/* HEADINGS */
-	.post-title, .page-title, .post-title-single {font-size:1.80em;}
-	.widgettitle, .searchbar-title, .comments-title, .comment-reply-title, .no-comments {font-size:1.45em;}
 
 	/* IMAGES */
 	.wp-post-image, .single-image {width:50%; float:left; margin:0.3em 0.5em 0.3em 0;}
